--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 .header-a {
     text-decoration: none;
     color: black;
-    margin: 15px 20px;
+    padding: 15px 10px;
 }
 .header-a:hover {
     border-bottom: 2px solid #0088D3;
